--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -19,19 +19,19 @@ jobs:
     
     # Install dependencies
     - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: 3.8
     
     - name: Install dependencies
       run: |
-        sudo apt install -y build-essential gfortran liblapack-dev cmake
-        pip install --upgrade  -r requirements.txt
+        $CONDA/bin/conda env update --file environment.yml --name base
         
     # Build the book
     - name: Build the book
       run: |
-        jupyter-book build .
+        $CONDA/bin/conda activate
+        $CONDA/bin/jupyter-book build .
     # Push the book's HTML to github-pages
     - name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3.5.9
